# mediapipe-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
assets/testdata/video/scripts/: generate_banana_clock_tabby.sh
examples/: audio_classification.rs  face_landmark.rs  gesture_recognition.rs  image_classification.rs  image_embedding.rs  object_detection.rs  text_classification.rs
schema/tflite/: README.md
scripts/: cargo-test.sh  download-models.sh  download-testdata.sh  env.sh  ffmpeg-deps-init.sh  flatbuffers-init.sh  rust-init.sh  wasmedge-init.sh  wasmedge-runner.sh
src/: build.rs  error.rs  lib.rs
src/model/: memory_text_file.rs  mod.rs  zip.rs
src/model/tflite/: mod.rs
src/postprocess/: mod.rs
src/postprocess/containers/: mod.rs
src/postprocess/containers/audio/: mod.rs  results_iter.rs
src/postprocess/containers/common/: category.rs  classification_result.rs  (+3 more)
src/postprocess/ops/: dequantize.rs  mod.rs  sigmoid.rs  softmax.rs
src/postprocess/processing/: mod.rs
src/postprocess/utils/: mod.rs
src/preprocess/: mod.rs
src/preprocess/audio/: audio_data_to_tensor.rs  audio_raw_data.rs  ffmpeg_data.rs  mod.rs  symphonia_data.rs
src/preprocess/common/: ffmpeg_input.rs  mod.rs
src/preprocess/text/: bert_tensor.rs  mod.rs  regex_to_tensor.rs
src/preprocess/vision/: ffmpeg.rs  image.rs  mod.rs
src/tasks/: mod.rs
src/tasks/audio/: mod.rs
src/tasks/common/: detection_common_impl.rs  mod.rs
src/tasks/text/: mod.rs
src/tasks/vision/: mod.rs
tests/: audio_classification.rs  face_detection.rs  face_landmark.rs  ffmpeg_video_input.rs  gesture_recognition.rs  hand_landmark.rs  image_classification.rs  image_embedding.rs  image_segmentation.rs  object_detection.rs  text_classification.rs  text_embedding.rs
(+62 files in other folders)
